# searxng-mcp

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  benchmark_image.py  docker-compose.yml  gateway.py  pyproject.toml  requirements.txt  run.ps1  run.sh
core/: __init__.py  browser.py  cache.py  config.py  document.py  extractor.py  http.py  image.py  logger.py  router.py  search.py  summarizer.py  webpage.py
docker/docling/: docker-compose.gpu.yml  docker-compose.yml
docker/docling/app/: server.py
docker/legacy/: Dockerfile  docker-compose.yml
docker/searxng/: docker-compose.yml  settings.yml
scripts/: benchmark_image.py
searxng/: settings.yml
